--- a/WordPress/trunk/modules/wordpress/templates/blocks/wp_block_contents.html
+++ b/WordPress/trunk/modules/wordpress/templates/blocks/wp_block_contents.html
@@ -1,6 +1,8 @@
+<{if $block.style != ""}>
 <style type="text/css">
 	<{$block.style}>
 </style>
+<{/if}>
 <div id='<{$block.divid}>'>
 <{if $block.use_theme_template == 0}>
   <{foreach item=content from=$block.contents}>
