カテゴリーの階層化に対応

--- a/WordPress/trunk/modules/wordpress/themes/default/wp-admin.css
+++ b/WordPress/trunk/modules/wordpress/themes/default/wp-admin.css
@@ -326,3 +326,8 @@
 #wpAdminMain #wphead a span {
 	display: none;
 }
+
+#wpAdminMain fieldset span.cat-nest {
+	display: block;
+	margin-left: 10px;
+}
