--- a/WordPress/trunk/modules/wordpress/wp-content/plugins/modPukiWiki/sample.css
+++ b/WordPress/trunk/modules/wordpress/wp-content/plugins/modPukiWiki/sample.css
@@ -135,19 +135,17 @@ pre.modPuki_pre {
 	border-left:   #DDDDEE 1px solid;
 	border-right:  #888899 1px solid;
 	font-size:12px;
-	line-height:14px;
-	padding:5px 10px 5px 10px;
+	line-height:120%;
+	padding:0.5em 10px 0.5em 10px;
 	margin: 5px 10px 5px 20px;
 	white-space: pre;
 	width:95ex;
+	height:auto;
 	max-width:95ex;
-	max-height:20ex;
 	background-color: #F0F8FF;
 	color: black;
-	line-break:strict;
-	word-wrap:break-word; /* IEÂÐºö */
-	word-break:break-all; /* IEÂÐºö */
 	overflow:auto; /* Moziila/OperaÂÐºö */
+	white-space: pre;
 }
 
 span.modPuki_noexists
