一部のCSSスタイル設定不具合対応

--- a/WordPress/trunk/modules/wordpress/themes/default/wp-layout.css
+++ b/WordPress/trunk/modules/wordpress/themes/default/wp-layout.css
@@ -60,7 +60,7 @@
 	font-size: 100%;
 }
 
-#wpMainContent p, li, .feedback {
+#wpMainContent p,#wpMainContent li,#wpMainContent .feedback {
 	font: 90%/175% "¥Ò¥é¥®¥Î³Ñ¥´ Pro W3", Osaka, Verdana, "£Í£Ó £Ð¥´¥·¥Ã¥¯", sans-serif;
 }
 #wpMainContent .storycontent{
