--- a/WordPress/trunk/modules/wordpress/themes/default/templates/wp_recent_comments1.html
+++ b/WordPress/trunk/modules/wordpress/themes/default/templates/wp_recent_comments1.html
@@ -13,7 +13,7 @@
 <{if $block.cat_date }>
         <span class="post-date"><{$record.comment_date}></span> : 
 <{/if}>
-        <span class="comment_author"><{$record.comment_author}></span>
+        <span class="comment_author"><{$record.comment_author_link}></span>
 <{if $block.show_type }>
         <span style="font-size:90%"> - <{$record.type}></span>
 <{/if}>
