--- a/WordPress/trunk/modules/wordpress/themes/default/wp-layout.css
+++ b/WordPress/trunk/modules/wordpress/themes/default/wp-layout.css
@@ -93,6 +93,11 @@
 	font-style: normal;
 }
 
+#wpMainContent ol#commentlist li {
+	list-style-type: decimal;
+	list-style-position:outside;
+}
+
 #wpMainContent ol#commentlist li p {
 	font-size: 100%;
 }
