--- a/WordPress/trunk/common/spaw/lib/themes/default/css/dialog.css
+++ b/WordPress/trunk/common/spaw/lib/themes/default/css/dialog.css
@@ -1,5 +1,6 @@
 body {
 	color: #000000;
+	background-color: #E8E8E8;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 9pt;
 	margin : 5 5 5 5;
